tests/ui/issues/issue-51022.rs
fn main<'a>() { }
    //~^ ERROR `main` function is not allowed to have generic parameters [E0131]

// ferrocene-annotations: fls_8jb3sjqamdpu
// Program Entry Point
